--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "nanoid": "^3.1.20",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
-        "react-scripts": "^5.0.1",
+        "react-scripts": "4.0.3",
         "react-toastify": "^7.0.2",
         "recoil": "^0.1.2",
         "simple-peer": "^9.9.3",
@@ -24,7 +24,7 @@
     },
     "scripts": {
         "dev": "react-scripts start",
-        "build": "npm run format && npm run lint && react-scripts build",
+        "build": "react-scripts build",
         "format": "prettier --write src/**/*.ts{,x}",
         "lint": "eslint src/**/*.ts{,x}"
     },
