--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -1,7 +1,7 @@
-worker_processes auto; ## Default: 1
+worker_processes auto;
 
 events {
-    worker_connections 4096; ## Default: 1024
+    worker_connections 4096;
 }
 
 http {
@@ -21,6 +21,29 @@ http {
 
         location / {
             try_files $uri /index.html;
+        }
+    }
+    server {
+        listen 443 ssl;
+        listen [::]:443 ssl;
+
+        server_name frixaco.uz;
+
+        ssl_certificate /etc/letsencrypt/live/frixaco.uz/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/frixaco.uz/privkey.pem;
+
+        root /usr/share/nginx/html;
+        include /etc/nginx/mime.types;
+
+        location / {
+            try_files $uri /index.html;
+        }
+        location /socket.io/ {
+            proxy_pass http://127.0.0.1:5000/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
         }
     }
 }
