--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -16,13 +16,13 @@ http {
 
     server {
         listen 80;
-        root /usr/share/nginx/html;
-        include /etc/nginx/mime.types;
+        listen [::]:80;
 
-        location / {
-            try_files $uri /index.html;
-        }
+        server_name frixaco.uz;
+
+        return 301 https://frixaco.uz$request_uri;
     }
+
     server {
         listen 443 ssl;
         listen [::]:443 ssl;
@@ -37,13 +37,6 @@ http {
 
         location / {
             try_files $uri /index.html;
-        }
-        location /socket.io/ {
-            proxy_pass http://127.0.0.1:5000/;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "Upgrade";
-            proxy_set_header Host $host;
         }
     }
 }
