--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,8 @@
 FROM node:14-alpine
 ENV NODE_ENV=production
 
+ARG ALLOW_ORIGIN=http://localhost
+
 WORKDIR /app
 
 COPY ["package.json", "package-lock.json*", "./"]
